fix align list hero

--- a/src/components/HeroList/style.css
+++ b/src/components/HeroList/style.css
@@ -34,5 +34,11 @@
     display: flex;
     align-items: center;
     margin-top: 100px;
+}
+
+.HeroList__action {
+    display: flex;
+    align-items: center;
+    margin-top: 100px;
     justify-content: center;
 }
